<resources>
    <string name="section_format">Date: %1$s</string>
    <string name="fajr">Fajr</string>
    <string name="zohar">Zohar</string>
    <string name="asr">Asr</string>
    <string name="magrib">Magrib</string>
    <string name="esha">Esha</string>
    <string name="app_name">Jamaat Times</string>
    <string name="add_masjid_masjid_name_hint">Name of masjid</string>
    <string name="add_masjid_masjid_submit_button">Create Masjid</string>
	<string name="get_masjid_location_button">Select the location of the Masjid</string>
	<string name="get_masjid_location_button_masjid_selected_text">Change Masjid location</string>
    <string name="help_text"><b>Help</b>\n
This app allows you to view masjid jamaat times, as well as add/change the times. If anyone makes any changes, then everyone sees the new version. It\'s a bit like editing wikipedia in that way.\n\n
<i>Editing times</i>\n
The interface for editing jamaat times looks confusing, but is based on a spreadsheet. All times are in 24-hour format.\n
When editing masjid times, pressing <i>any</i> of the buttons up/down/left/right/copy up/copy down, will save the time you have entered to the server. This will slightly change in the future to allow undoing the save for a brief period after saving, but otherwise, the interface probably won\'t change, unless someone can think of a better way.\n\n
This app is a work in progress. Any ideas/improvements/issues, please either leave a review on the Play Store or open an issue on <a href="https://www.github.com/ismail-s/jtime/issues">Github</a>.\n\n
<i>Open source libraries used</i>\n
<a href="https://kotlinlang.org">Kotlin</a> (Apache license)\n
<a href="http://kovenant.komponents.nl">Kovenant</a> (MIT license)\n
<a href="https://github.com/kittinunf/Fuel">Fuel</a> (MIT license)\n
<a href="https://mikepenz.github.io/MaterialDrawer">MaterialDrawer</a> (Apache license)
</string>
    <string name="nearby_times_title_text">Nearby times for %1$s</string>
    <string name="home_fragment_next_time_future_text">%1$s at %2$s is at %3$s</string>
    <string name="home_fragment_next_time_past_text">%1$s at %2$s started at %3$s</string>
    <string name="home_fragment_could_not_get_loc_text">
        Could not get your location. Location is needed to show salaah times for the nearest masjids.
    </string>
    <string name="edit_salaah_times">Edit</string>
    <string name="change_times__undo_button">undo</string>
    <string name="change_times__up_button">up</string>
    <string name="change_times__copy_up_button">copy up</string>
    <string name="change_times__left_button">left</string>
    <string name="change_times__right_button">right</string>
    <string name="change_times__down_button">down</string>
    <string name="change_times__copy_down_button">copy down</string>
    <string name="help_button">Help</string>

    <string name="logout_success_toast">Have successfully logged out</string>
    <string name="logout_failure_toast">Logout unsuccessful: %1$s</string>
    <string name="login_success_toast">Logged in successfully</string>
    <string name="login_failure_toast">Failed to login, with error: %1$s</string>
    <string name="get_masjids_failure_toast">Weren\'t able to get masjids: %1$s</string>
    <string name="get_masjid_times_failure_toast">Failed to get times: %1$s</string>
    <string name="invalid_salaah_time_toast">Time isn\'t valid. Change it so it is valid, or click on the undo button</string>
    <string name="salaah_time_update_failure_toast">Failed to update db with new time: %1$s</string>
    <string name="get_location_for_nearby_masjids_failure_toast">Could not get your current location, so don\'t know which masjids are nearby</string>
    <string name="no_salaah_times_nearby_masjids_toast">No salaah times for nearby masjids found</string>
	<string name="no_masjid_selected_toast">No masjid was selected</string>
	<string name="masjid_created_toast">Masjid "%1$s" created</string>
	<string name="masjid_not_created_toast">Error when creating masjid: %1$s</string>

    <string name="drawer_item_logout">Logout</string>
    <string name="drawer_item_login">Login</string>
    <string name="drawer_item_add_masjid">Add Masjid</string>
    <string name="drawer_item_all_masjids">All Masjids</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_nearby_times_header">Nearby times for:</string>

    <string name="fragment_title_all_masjids">All masjids</string>
    <string name="fragment_title_add_masjid">Create a new masjid</string>
    <string name="fragment_title_masjid_times">Masjid times</string>
    <string name="fragment_title_help">Help</string>
    <string name="fragment_title_home">Home</string>
    <string name="fragment_title_change_salaah_times">Change salaah times</string>
    <string name="fragment_title_nearby_times">Nearby times</string>

    <string name="menu_item_home_fragment_change_date">Change date</string>
    <string name="menu_item_home_fragment_change_location">Change location</string>

    <string name="no_network_exception">Network is not available</string>
    <string name="no_location_exception">Location could not be obtained</string>
    <string name="generic_server_exception">Server error</string>

    <string name="add_masjid_marker_title">Masjid location</string>
    <string name="label_home_fragment_title">Nearby times for %1$s%2$s</string>
    <string name="powered_by_google_logo_content_description">Powered by Google Logo</string>
</resources>
